Add headless AI-vs-AI balance lab; fix shield-block shake crash it found
BalanceLab plays full deterministic smash-rules matches with no JavaFX
toolkit, no rendering, and no progression side effects: a harness bridge
in BirdGame3 (harnessPrepareMatch/harnessTick) mirrors the fixed-update
body, and MatchController.triggerMatchEnd short-circuits under harness
mode so no timers or UI spawn. The lab runs every roster pairing with
sides swapped and per-match seeds (840 matches in ~19s) and writes a
win-rate tier list plus the full matchup matrix to
audit/balance-report.md. Run it with: mvnw test -Dtest=BalanceLabRun
(the runner name deliberately avoids CI's surefire patterns). CI gains
a determinism guard: two same-seed headless matches must produce
identical state hashes.

The lab's first three pairings exposed a live gameplay crash: blocking
a hit while screen shake exceeded 8 threw IllegalArgumentException from
Math.clamp(v, currentShake, 8) in resolveShieldHit - every post-finisher
block in real matches hit this and was silently swallowed by the frame
recovery handler. Replaced with max(current, min(8, v)).

Battlefield arena setup is extracted from startMatch for harness reuse.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>